--- a/views/home.jade
+++ b/views/home.jade
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  h1 Hackathon Starter
-  p.lead A boilerplate for Node.js web applications.
+  h1 AutoSaveMaartjeLindaJulia
+  p.lead Nice tool for experimenting met OpenBanking!
   hr
   .row
     .col-sm-6
