--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -1,8 +1,8 @@
 footer
   .container.text-center
-    p.pull-left © 2015 Company, Inc. All Rights Reserved
+    p.pull-left © 2015 HarryWesterman Company, Inc. All Rights Reserved
     ul.pull-right.list-inline
       li
-        a(href='https://github.com/sahat/hackathon-starter') GitHub Project
+        a(href='https://github.com/harrywesterman/autosave') GitHub Project
       li
-        a(href='https://github.com/sahat/hackathon-starter/issues') Issues
+        a(href='https://github.com/harrywesterman/autosave/issues') Issues
