omdat ze toekijken

--- a/views/partials/footer.jade
+++ b/views/partials/footer.jade
@@ -1,6 +1,6 @@
 footer
   .container.text-center
-    p.pull-left © 2015 HarryWesterman via Github, Inc. All Rights Reserved
+    p.pull-left © 2015 HarryWesterman via Github terwijl ze toekijken, Inc. All Rights Reserved
     ul.pull-right.list-inline
       li
         a(href='https://github.com/harrywesterman/autosave') GitHub Project
