--- a/views/api/twitter.jade
+++ b/views/api/twitter.jade
@@ -35,9 +35,9 @@ block content
   .lead Latest
     strong  #{tweets.length}
     |  Tweets containing the term
-    strong  nodejs
+    strong  hitteplan
     |  in NYC within
-    strong  10000
+    strong  30000
     |  miles radius
 
   ul.media-list
