Tekst nog even goed

--- a/views/api/twitter.jade
+++ b/views/api/twitter.jade
@@ -36,9 +36,9 @@ block content
     strong  #{tweets.length}
     |  Tweets containing the term
     strong  hitteplan
-    |  in NYC within
-    strong  30000
-    |  miles radius
+    //|  in NYC within
+    //strong  30000
+    //|  miles radius
 
   ul.media-list
     for tweet in tweets
