Van hitteplan naar temparatuur

--- a/views/api/twitter.jade
+++ b/views/api/twitter.jade
@@ -35,7 +35,7 @@ block content
   .lead Latest
     strong  #{tweets.length}
     |  Tweets containing the term
-    strong  hitteplan
+    strong  temperatuur
     //|  in NYC within
     //strong  30000
     //|  miles radius
